--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ckeditor/ckeditor5-build-classic",
+  "name": "@ckeditor/ckeditor5-build-yx-std",
   "version": "10.0.1",
-  "description": "CKEditor 5 classic editor build.",
+  "description": "CKEditor 5 yunxin standard editor build.",
   "keywords": [
     "ckeditor5-build",
     "CKEditor",
@@ -69,5 +69,8 @@
     "create-entry-file": "node bin/create-entry-file.js",
     "build-ckeditor": "sh bin/build-ckeditor.sh",
     "preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
+  },
+  "dependencies": {
+    "ckeditor5-simple-upload": "^1.0.3"
   }
 }
